[gd_scene load_steps=6 format=3 uid="uid://dr0rj1hlom5va"]

[ext_resource type="Script" path="res://scripts/blood_mist.gd" id="1_hbiii"]
[ext_resource type="Texture2D" uid="uid://dt5fom6fqdecn" path="res://assets/textures/effects/blood_mist.png" id="1_hsejc"]

[sub_resource type="ORMMaterial3D" id="ORMMaterial3D_w81v2"]
transparency = 3
alpha_hash_scale = 1.0
alpha_antialiasing_mode = 0
albedo_color = Color(0.92549, 0, 0.0823529, 1)
albedo_texture = ExtResource("1_hsejc")
disable_receive_shadows = true
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_gch1g"]
material = SubResource("ORMMaterial3D_w81v2")
size = Vector2(0.5, 0.5)

[sub_resource type="SphereShape3D" id="SphereShape3D_3netr"]
radius = 0.1

[node name="blood_mist" type="CharacterBody3D"]
collision_layer = 0
script = ExtResource("1_hbiii")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("QuadMesh_gch1g")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
mesh = SubResource("QuadMesh_gch1g")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="."]
mesh = SubResource("QuadMesh_gch1g")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="."]
mesh = SubResource("QuadMesh_gch1g")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_3netr")
